--- a/style.css
+++ b/style.css
@@ -165,6 +165,12 @@ margin-top: 10%}
  
 }
 /*projets*/
+.titre img
+{margin: 30px auto;
+display: block;
+width: 70%;
+height: auto;
+}
 .projets img
 {
 border-radius:5px;
@@ -223,4 +229,10 @@ font-size:15px;
 }
 .projets
 {flex-wrap: wrap;}
+.titre img
+{margin: 30px auto;
+display: block;
+width: 100%;
+height: auto;
+}
 }
