--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ aside
 {margin: auto}
 
 h1, h2, h6
-{color:#6a1b9a;}
+{color: #ffffff;}
 
 a:hover
 {cursor: pointer;}
@@ -236,3 +236,4 @@ width: 100%;
 height: auto;
 }
 }
+
